--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">G1-Chat</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="welcome_message">Welcome to G1-chat!</string>
     <string name="action_settings">Settings</string>
 </resources>
