--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
 
     <string name="welcome_message">Welcome to G1-chat!</string>
     <string name="action_settings">Settings</string>
+
+    <string name="layout_login_title">Login</string>
+    <string name="layout_login_username">Username</string>
+    <string name="layout_login_password">Password</string>
+    <string name="layout_login_button_submit">Login</string>
 </resources>
