--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">G1-Chat</string>
 
+    <string name="menu_action_settings">Settings</string>
+
     <string name="layout_login_title">Login</string>
     <string name="layout_login_username">Username</string>
     <string name="layout_login_password">Password</string>
