--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">G1-Chat</string>
 
-    <string name="layout_login_title">Login</string>
-    <string name="layout_login_username">Username</string>
-    <string name="layout_login_password">Password</string>
-    <string name="layout_login_button_submit">Login</string>
+    <string name="login_title">Login</string>
+    <string name="login_username">Username</string>
+    <string name="login_password">Password</string>
+    <string name="login_button_submit">Login</string>
+    <string name="alert_wait">Please wait...</string>
+    <string name="err_fields_empty">Please fill in all the fields.</string>
+    <string name="err_login">The username or password is incorrect.</string>
 </resources>
