--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="login_username">Username</string>
     <string name="login_password">Password</string>
     <string name="login_button_submit">Login</string>
+    <string name="logout">Logout</string>
     <string name="alert_wait">Please wait...</string>
     <string name="err_fields_empty">Please fill in all the fields.</string>
     <string name="err_login">The username or password is incorrect.</string>
