--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="title_activity_newsflash">Newsflash</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_create_newsflash">CreateNewsflashActivity</string>
+    <string name="create_newsflash_title_hint">Title</string>
+    <string name="create_newsflash_content_hint">Content</string>
+    <string name="create_newsflash_submit">Submit</string>
 </resources>
