--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="title_activity_newsflash">Newsflash</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_admin">Admin</string>
+    <string name="add_user">User</string>
+    <string name="add_news">News</string>
+    <string name="title_activity_user_list">Users</string>
 </resources>
