--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,8 @@
     <string name="register_button_submit">Add</string>
     <string name="register_name">Name</string>
     <string name="activity_register">Register</string>
+    <string name="chat_text">Comment</string>
+    <string name="chat_button">Send</string>
+
+
 </resources>
