--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,24 +12,22 @@
     <string name="title_activity_newsflash">Newsflash</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_create_newsflash">CreateNewsflashActivity</string>
+    <string name="title_activity_create_newsflash">Create Newsflash</string>
     <string name="create_newsflash_title_hint">Title</string>
     <string name="create_newsflash_content_hint">Content</string>
     <string name="create_newsflash_submit">Submit</string>
     <string name="create_newsflash">Create Newsflash</string>
     <string name="err_create_newsflash">Newsflash was not created.</string>
-
     <string name="title_activity_admin">Admin</string>
     <string name="add_user">User</string>
     <string name="add_news">News</string>
     <string name="reg_user">Register user</string>
     <string name="title_activity_user_list">Users</string>
-
     <string name="register_title">Register</string>
     <string name="register_button_submit">Add</string>
     <string name="register_name">Name</string>
     <string name="activity_register">Register</string>
-    <string name="title_activity_chat">ChatActivity</string>
+    <string name="title_activity_chat">Chat</string>
     <string name="chat_text">Comment</string>
     <string name="chat_button">Send</string>
 </resources>
