--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,7 @@
     <string name="chat_button">Send</string>
     <string name="menu_delete">Delete</string>
     <string name="menu_edit">Edit</string>
+    <string name="err_chat_refresh">Error when retrieving messages.</string>
+    <string name="err_chat_send">Error when sending message.</string>
+    <string name="err_fields_illegal">The input contains illegal characters.</string>
 </resources>
