--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="err_chat_send">Error when sending message.</string>
     <string name="err_fields_illegal">The input contains illegal characters.</string>
     <string name="save_button">Save</string>
-    <string name="title_activity_edit">Edit Message</string>
+    <string name="title_activity_edit">EDIT MESSAGE</string>
 
 
     <string name="name">NAME:</string>
