Add rough layout for channel list and creation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,8 @@
 
     <string name="name">NAME:</string>
     <string name="username">USERNAME:</string>
+    <string name="create_channel">Create new channel</string>
+    <string name="save">Save</string>
 
 
 </resources>
